--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "js-sha1": "^0.7.0",
     "lucide-react": "^0.399.0",
     "react-icons": "^5.2.1",
+    "react-rewards": "^2.0.4",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.1"
