--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "sideEffects": false,
   "type": "module",
   "scripts": {
+    "prebuild": "ts-node scripts/hyphenate.ts",
     "build": "remix vite:build",
     "dev": "remix vite:dev",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
@@ -25,6 +26,16 @@
     "@remix-run/serve": "^2.10.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "hyphenation.da": "^0.2.1",
+    "hyphenation.de": "^0.2.1",
+    "hyphenation.en-us": "^0.2.1",
+    "hyphenation.es": "^0.2.1",
+    "hyphenation.fi": "^0.2.1",
+    "hyphenation.fr": "^0.2.1",
+    "hyphenation.it": "^0.2.1",
+    "hyphenation.nb-no": "^0.2.1",
+    "hyphenation.sv": "^0.2.1",
+    "hypher": "^0.2.5",
     "isbot": "^4.1.0",
     "js-sha1": "^0.7.0",
     "lucide-react": "^0.399.0",
@@ -50,6 +61,7 @@
     "postcss": "^8.4.38",
     "prettier": "3.3.2",
     "tailwindcss": "^3.4.4",
+    "ts-node": "^10.9.2",
     "typescript": "^5.1.6",
     "vite": "^5.0.0",
     "vite-tsconfig-paths": "^4.2.1"
