fix: correct path for prebuild script in package.json

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "sideEffects": false,
   "type": "module",
   "scripts": {
-    "prebuild": "ts-node scripts/hyphenate.ts",
+    "prebuild": "ts-node app/scripts/hyphenate.ts",
     "build": "remix vite:build",
     "dev": "remix vite:dev",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
