--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "sideEffects": false,
   "type": "module",
   "scripts": {
-    "prebuild": "ts-node app/scripts/hyphenate.ts",
+    "compile:hyphenate": "tsc --project tsconfig.scripts.json",
+    "rename:hyphenate": "mv dist/scripts/hyphenate.js dist/scripts/hyphenate.cjs",
+    "prebuild": "npm run compile:hyphenate && npm run rename:hyphenate && node dist/scripts/hyphenate.cjs",
     "build": "remix vite:build",
     "dev": "remix vite:dev",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
@@ -62,7 +64,7 @@
     "prettier": "3.3.2",
     "tailwindcss": "^3.4.4",
     "ts-node": "^10.9.2",
-    "typescript": "^5.1.6",
+    "typescript": "^5.8.3",
     "vite": "^5.0.0",
     "vite-tsconfig-paths": "^4.2.1"
   },
