--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@netlify/functions": "^2.6.0",
     "@netlify/remix-adapter": "^2.3.1",
-    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.12",
     "@remix-run/node": "^2.10.0",
     "@remix-run/react": "^2.10.0",
     "@remix-run/serve": "^2.10.0",
