--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "isbot": "^4.1.0",
     "js-sha1": "^0.7.0",
     "lucide-react": "^0.399.0",
+    "qrcode.react": "^4.2.0",
     "react-icons": "^5.2.1",
     "react-rewards": "^2.0.4",
     "tailwind-merge": "^2.3.0",
