--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@remix-run/node": "^2.10.0",
     "@remix-run/react": "^2.10.0",
     "@remix-run/serve": "^2.10.0",
+    "@tailwindcss/vite": "^4.1.11",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "hyphenation.da": "^0.2.1",
@@ -51,6 +52,7 @@
   },
   "devDependencies": {
     "@remix-run/dev": "^2.10.0",
+    "@tailwindcss/postcss": "^4.1.11",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
@@ -64,7 +66,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.38",
     "prettier": "3.3.2",
-    "tailwindcss": "^3.4.4",
+    "tailwindcss": "^4.1.11",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
     "vite": "^5.0.0",
