--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@remix-run/react": "^2.10.0",
     "@remix-run/serve": "^2.10.0",
     "@tailwindcss/vite": "^4.1.11",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "hyphenation.da": "^0.2.1",
     "hyphenation.de": "^0.2.1",
@@ -46,7 +46,7 @@
     "qrcode.react": "^4.2.0",
     "react-icons": "^5.2.1",
     "react-rewards": "^2.0.4",
-    "tailwind-merge": "^2.3.0",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.1"
   },
@@ -68,6 +68,7 @@
     "prettier": "3.3.2",
     "tailwindcss": "^4.1.11",
     "ts-node": "^10.9.2",
+    "tw-animate-css": "^1.3.5",
     "typescript": "^5.8.3",
     "vite": "^5.0.0",
     "vite-tsconfig-paths": "^4.2.1"
