--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-rewards": "^2.0.4",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^13.0.0",
     "vaul": "^0.9.1"
   },
   "devDependencies": {
@@ -55,6 +56,7 @@
     "@tailwindcss/postcss": "^4.1.11",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.45.0",
     "@typescript-eslint/parser": "^8.45.0",
     "autoprefixer": "^10.4.19",
